Adicionei um linear gradient ao header

--- a/siteFatec.html
+++ b/siteFatec.html
@@ -13,9 +13,9 @@
             <a class="linkHeader">A fatec</a>
             <a class="linkHeader">Cursos</a>
             <a class="linkHeader">Diretorias</a>
-            <a class="linkHeader">bibliotecas</a>
+            <a class="linkHeader">Bibliotecas</a>
             <a class="linkHeader">Vestibular</a>
-            <a class="linkHeader">alunos</a>
+            <a class="linkHeader">Alunos</a>
         
         
     </div>
