--- a/siteFatec.html
+++ b/siteFatec.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -16,8 +20,7 @@
             <a class="linkHeader">Bibliotecas</a>
             <a class="linkHeader">Vestibular</a>
             <a class="linkHeader">Alunos</a>
-        
-        
+            <i class="fa fa-bars hambuguer"></i>
     </div>
     <div class="subHeader"><p>Faculdade de tecnologia José Crespo Gonzolez</p></div>
 </body>
